[multi job] optimize composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "multi/processor",
     "description": "A php Multi task distribution component",
-    "type": "composer-plugin",
+    "type": "library",
     "require": {
         "php": "^7.1",
         "ext-swoole": "^4.2.8"
